--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -112,11 +112,9 @@
       top: -1px;
     }
 
-    &:hover{
+    &:hover {}
 
-    }
-
-    &:active{
+    &:active {
       opacity: 0.3;
     }
   }
