--- a/source/sass/blocks/main/card-show-more.scss
+++ b/source/sass/blocks/main/card-show-more.scss
@@ -1,14 +1,12 @@
-.card-show-more{
+.card-show-more {}
 
-}
-
-.card-show-more__image{
+.card-show-more__image {
   margin: 5px auto 0;
   display: block;
   text-align: center;
 }
 
-.card-show-more__title{
+.card-show-more__title {
   margin: 0;
   padding: 23px 0 8px;
   text-align: center;
@@ -19,7 +17,7 @@
   color: $another-black;
 }
 
-.card-show-more__description{
+.card-show-more__description {
   margin: 0;
   padding-bottom: 21px;
   text-align: center;
@@ -29,30 +27,28 @@
 }
 
 @media (min-width: $tablet-width) {
-  .card-show-more{
+  .card-show-more {
     background-color: $white;
     outline: 2px solid $basic-gray;
     padding-top: 52px;
   }
 
-  .card-show-more__image{
+  .card-show-more__image {
     margin: 0 auto 49px;
 
   }
 
-  .card-show-more__title{
+  .card-show-more__title {
     font-size: 20px;
     line-height: 22px;
     margin-bottom: 23px;
     padding: 0;
   }
 
-  .card-show-more__description{
+  .card-show-more__description {
     font-size: 16px;
     line-height: 18px;
     margin-bottom: 87px;
     padding-bottom: 0;
-
-
   }
 }
