--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -24,7 +24,7 @@
 
 .main-header__logo-secondary {
   display: block;
-  padding: 24px 0;
+  padding: 23px 0 24px;
   margin: 0 auto;
 
   &:hover {
