--- a/source/sass/blocks/footer/main-footer.scss
+++ b/source/sass/blocks/footer/main-footer.scss
@@ -10,7 +10,7 @@
 
 .main-footer__link {
   text-align: center;
-  padding-bottom: 31px;
+  padding-bottom: 29px;
   border-bottom: 1px solid $border-gray;
 
   &:hover {
@@ -29,23 +29,24 @@
 
 @media (min-width: $tablet-width) {
   .main-footer {
-    padding: 58px 0 55px;
+    padding: 57px 0 56px;
     background-color: $basic-gray;
   }
 
   .main-footer__wrapper {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
   }
 
   .copyright__text {
-    margin-right: 22px;
+    margin-right: 24px;
   }
 
   .main-footer__link {
-    padding: 0;
+    padding: 7px 0 0;
     border: none;
+    margin-right: 25px;
   }
 
   .main-footer__copyright {
