--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -59,6 +59,7 @@
     justify-content: space-between;
     border: none;
     width: 440px;
+    margin-top: 8px;
 
     &::before {
       border-bottom: none;
@@ -85,6 +86,10 @@
       left: 1px;
       background-color: $basic-green;
     }
+
+    &:nth-child(2){
+      margin-left: -4px;
+    }
   }
 
   .site-list__link {
@@ -101,6 +106,7 @@
 
 @media (min-width: $desktop-width) {
   .site-list {
+    min-width: 478px;
 
     &--white {
       color: $white;
@@ -117,6 +123,7 @@
   .site-list__item {
     font-size: 20px;
     line-height: 30px;
+    padding: 8px 0;
 
     &--current::after {
       content: "";
@@ -127,6 +134,10 @@
       right: 1px;
       left: 1px;
       background-color: $basic-green;
+    }
+
+    &:nth-child(2){
+      margin-left: 0;
     }
   }
 
