--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -1,5 +1,3 @@
-.programs {}
-
 .programs__list {
   list-style-type: none;
   margin: 0;
@@ -10,13 +8,15 @@
 
 .programs__item {
   background-color: $basic-gray;
-  padding: 20px;
+  padding: 20px 20px 22px;
   position: relative;
 
   &--weight-loss {
     &::before {
       content: url(../img/cat-slim.svg);
       position: absolute;
+      left: 22px;
+      top: 21px;
     }
   }
 
@@ -25,13 +25,14 @@
       content: url(../img/cat-pro.svg);
       position: absolute;
       left: 13px;
+      top: 24px;
     }
   }
 }
 
 .programs__title {
   margin: 0;
-  padding: 10px 0 0 71px;
+  padding: 9px 0 0 71px;
   text-transform: uppercase;
   font-size: 24px;
   line-height: 37px;
@@ -40,7 +41,7 @@
 
 .programs__description {
   margin: 0;
-  padding: 22px 0;
+  padding: 30px 0 22px;
   color: $special-dark-gray;
   font-family: "Arial";
   border-bottom: 1px solid $border-gray;
@@ -56,24 +57,30 @@
   line-height: 16px;
   position: relative;
 
-
   &::after {
     position: absolute;
     content: url(../img/icon-arrow.svg);
     left: 100px;
-    top: 19px;
+    top: 18px;
     display: block;
   }
 }
 
 @media (min-width: $tablet-width) {
+  .programs__list {
+    margin-top: 1px;
+    gap: 30px;
+  }
+
   .programs__item {
-    padding: 77px 62px 57px 52px;
+    padding: 77px 62px 56px 52px;
 
     &--weight-loss {
       &::before {
         content: url(../img/cat-slim-tablet.svg);
         right: 62px;
+        left: unset;
+        top: 80px;
       }
     }
 
@@ -82,6 +89,7 @@
         content: url(../img/cat-pro-tablet.svg);
         right: 28px;
         left: unset;
+        top: 90px;
       }
     }
   }
@@ -93,7 +101,7 @@
   }
 
   .programs__description {
-    padding: 22px 0 52px;
+    padding: 25px 0 52px;
     font-size: 16px;
     line-height: 24px;
     border-bottom: none;
@@ -108,8 +116,8 @@
     &::after {
       position: absolute;
       content: url(../img/icon-arrow.svg);
-      left: 133px;
-      top: -1px;
+      left: 131px;
+      top: -4px;
     }
 
     &:hover {}
