--- a/source/sass/blocks/main/search-form.scss
+++ b/source/sass/blocks/main/search-form.scss
@@ -38,6 +38,7 @@
   font-size: 14px;
   line-height: 18px;
   display: block;
+  margin-top: 3px;
   margin-bottom: 20px;
 }
 
@@ -53,7 +54,7 @@
 
   .search-form__title {
     color: $black;
-    padding: 0 0 41px 80px;
+    padding: 40px 0 41px 86px;
     text-align: start;
   }
 
@@ -62,14 +63,14 @@
     text-transform: uppercase;
     font-size: 20px;
     line-height: 20px;
-    padding: 0 0 20px 80px;
+    padding: 0 0 20px 88px;
     text-align: start;
   }
 
   .search-form__button {
     position: absolute;
-    top: 220px;
-    left: 80px;
+    top: 270px;
+    left: 90px;
     font-size: 20px;
     line-height: 26px;
     margin: 0;
@@ -82,19 +83,26 @@
 
   .search-form__container {
     min-height: 555px;
+    padding: 85px 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .search-form__title {
-    padding: 109px 0 41px 80px;
+    padding: 0;
+    margin-bottom: 40px;
   }
 
   .search-form__subtitle {
-    margin: 0;
+    margin: 0 0 50px 0;
+    padding: 0;
+    font-size: 20px;
+    line-height: 20px;
   }
 
   .search-form__button {
-    bottom: 160px;
-    top: auto;
+    position: static;
   }
 
   .search-form__image {
