--- a/source/sass/blocks/main/cooperation.scss
+++ b/source/sass/blocks/main/cooperation.scss
@@ -70,9 +70,9 @@ iframe {
     position: absolute;
     width: min-content;
     background-color: $white;
-    gap: 90px;
+    gap: 96px;
     top: 95px;
-    padding: 62px 80px 58px;
+    padding: 55px 75px 58px 80px;
   }
 
   .cooperation__address {
