--- a/source/sass/blocks/main/example.scss
+++ b/source/sass/blocks/main/example.scss
@@ -67,6 +67,7 @@
 
   &:hover {
     border-color: $basic-green;
+    background-color: $white;
   }
 
   &:hover>.example__range-scale-circle {
@@ -157,12 +158,21 @@
 
   .example__range-slider-wrapper {
     height: 462px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      height: 462px;
+      width: 100%;
+      background-color: $basic-gray-3;
+    }
   }
 
   .example__range-slider {
     width: 560px;
     height: 512px;
     transform: translateY(-151px);
+    z-index: 1;
   }
 }
 
@@ -173,7 +183,7 @@
     &::after {
       content: "";
       position: absolute;
-      height: 463px;
+      height: 462px;
       width: 100%;
       background-color: $basic-gray-3;
       bottom: 0;
@@ -187,8 +197,9 @@
 
   .example__content-wrapper {
     margin-bottom: 0;
-    padding-right: 64px;
+    padding-right: 0;
     z-index: 1;
+    width: 436px;
   }
 
   .example__title {
@@ -198,7 +209,7 @@
 
   .example__description {
     margin: 0 0 69px;
-    padding-top: 70px;
+    padding: 70px 0 0;
   }
 
   .example__stats-wrapper {
@@ -208,21 +219,25 @@
   }
 
   .example__stats {
-    margin: 0 70px 60px 0;
+    margin: 0 70px 64px 0;
   }
 
   .example__costs {
     text-align: left;
     flex-direction: row;
     justify-content: start;
-    gap: 63px;
+    gap: 66px;
   }
 
   .example__range-slider-wrapper {
     height: 512px;
     justify-content: end;
-    padding-right: 110px;
+    padding-right: 0;
     background-color: $white;
+
+    &::after {
+      display: none;
+    }
   }
 
   .example__range-slider {
