--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -123,16 +123,14 @@
   .site-list__item {
     font-size: 20px;
     line-height: 30px;
-    padding: 8px 0;
+    padding: 10px 0;
 
     &--current::after {
       content: "";
       position: absolute;
-      bottom: 0;
+      bottom: 5px;
       width: 100%;
       height: 2px;
-      right: 1px;
-      left: 1px;
       background-color: $basic-green;
     }
 
@@ -145,11 +143,9 @@
     &::after {
       content: "";
       position: absolute;
-      bottom: 0;
+      bottom: 5px;
       width: 100%;
       height: 2px;
-      right: 1px;
-      left: 1px;
       background-color: $white;
     }
   }
