--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -2,17 +2,73 @@
   display: flex;
   flex-direction: column;
   padding: 20px 0 25px;
+  gap: 13px;
+  position: relative;
+
+  &::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -20px;
+    right: -20px;
+    height: 1px;
+    background-color: $border-gray;
+  }
+
+  &:last-child::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -20px;
+    right: -20px;
+    height: 1px;
+    background-color: $border-gray;
+  }
 }
 
 .card__content-wrapper {
   display: grid;
   grid-template-columns: 50% 50%;
-  padding-bottom: 22px;
+  position: relative;
 }
 
 .card__image-wrapper {
+  position: absolute;
   margin: 0 auto;
-  padding-top: 14px;
+
+  &--big{
+    bottom: 0;
+    left: 28px;
+  }
+
+  &--small-chicken{
+    left: 36px;
+    bottom: 12px;
+  }
+
+  &--small-fish{
+    left: 36px;
+    bottom: 7px;
+  }
+
+  &--small-buckwheat{
+    left: 36px;
+    bottom: 4px;
+  }
+
+  &--small-rice{
+    left: 34px;
+    bottom: 4px;
+  }
+}
+
+.card__image{
+  display: block;
+}
+
+.card__info-wrapper{
+  padding-bottom: 9px;
+  grid-column: 2 / -1;
 }
 
 .card__title {
@@ -22,7 +78,7 @@
   font-weight: 400;
   text-transform: uppercase;
   color: $special-dark-gray-2;
-  padding-bottom: 18px;
+  padding-bottom: 14px;
   width: 76px;
 }
 
@@ -34,6 +90,21 @@
   font-size: 12px;
   line-height: 16px;
   color: $special-dark-gray;
+}
+
+.card__value{
+  &--weight{
+    margin-right: 2px;
+  }
+
+  &--taste{
+    margin-right: -1px;
+  }
+
+  &--price{
+    margin-right: -1px;
+  }
+
 }
 
 @media (min-width: $tablet-width) {
