--- a/source/sass/blocks/main/extra-goods.scss
+++ b/source/sass/blocks/main/extra-goods.scss
@@ -1,6 +1,6 @@
 .extra-goods__title {
   position: relative;
-  padding-bottom: 36px;
+  padding: 25px 0 34px;
 
   &::after {
     position: absolute;
@@ -8,8 +8,8 @@
     background-color: #68b738;
     width: 53px;
     height: 2px;
-    right: -30px;
-    top: 15px;
+    right: -20px;
+    top: 41px;
   }
 }
 
@@ -35,13 +35,13 @@
       background-color: #68b738;
       width: 30px;
       height: 2px;
-      left: -67px;
+      left: -30px;
       top: 20px;
     }
 
     &::after {
       width: 328px;
-      right: -70px;
+      right: -30px;
       top: 20px;
     }
   }
