--- a/source/sass/blocks/main/special-offer.scss
+++ b/source/sass/blocks/main/special-offer.scss
@@ -26,7 +26,7 @@
   color: $white;
   text-align: center;
   margin: 0;
-  padding: 0 61px 0 58px;
+  padding: 5px 61px 0 58px;
 }
 
 @media (min-width: $tablet-width) {
