финишная стилизация всех страниц каталога

--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -5,6 +5,10 @@
   gap: 13px;
   position: relative;
 
+  &--show-more{
+    gap: 12px;
+  }
+
   &::before{
     content: "";
     position: absolute;
@@ -30,11 +34,21 @@
   display: grid;
   grid-template-columns: 50% 50%;
   position: relative;
+
+  &--show-more{
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .card__image-wrapper {
   position: absolute;
   margin: 0 auto;
+
+  &--show-more{
+    position: static;
+    margin-top: 5px;
+  }
 
   &--big{
     bottom: 0;
@@ -80,6 +94,14 @@
   color: $special-dark-gray-2;
   padding-bottom: 14px;
   width: 76px;
+
+  &--show-more{
+    width: auto;
+    text-align: center;
+    margin-top: 23px;
+    padding-left: 2px;
+    padding-bottom: 8px;
+  }
 }
 
 .card__description {
@@ -90,6 +112,10 @@
   font-size: 12px;
   line-height: 16px;
   color: $special-dark-gray;
+
+  &--show-more{
+    justify-content: center;
+  }
 }
 
 .card__value{
@@ -116,12 +142,23 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+
+    &--show-more{
+      background-color: $white
+    }
+
+    &::before{
+      display: none;
+    }
+
+    &:last-child::after{
+      display: none;
+    }
   }
 
   .card__content-wrapper {
     grid-template-columns: none;
-    padding-bottom: 33px;
+    padding-bottom: 12px;
   }
 
   .card__image-wrapper {
@@ -132,9 +169,16 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
-    transform: translateY(-303px);
+    transform: translateY(-211px);
+
+    &--big-chicken{
+      transform: translateY(-204px);
+    }
+
+    &--show-more{
+      transform: translateY(-182px);
+    }
   }
 
   .card__title {
@@ -146,9 +190,85 @@
     width: 150px;
   }
 
+  .card__title-weight{
+    margin-left: 5px;
+  }
+
   .card__description {
     font-size: 16px;
-    padding: 7px 0 9px;
+    padding: 7px 0 7px;
     border-bottom: 1px solid $special-gray;
+
+    &--show-more{
+      text-align: center;
+      margin: 0 auto;
+      min-width: 167px;
+      padding: 8px 30px 7px;
+      line-height: 18px;
+      border-bottom: 1px solid transparent;
+    }
+
+    &:last-child{
+      padding-top: 8px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .card {
+    padding: 164px 35px 40px 30px;
+    max-width: 245px;
+
+    &--show-more{
+      background-color: $white;
+      outline: 2px solid $basic-gray;
+    }
+  }
+
+  .card__info-wrapper{
+    &--show-more{
+      margin: 0 0 53px;
+    }
+  }
+
+  .card__title{
+    line-height: 21px;
+    padding: 0 0 18px 10px;
+
+    &--show-more{
+      margin: -2px 0 0 13px;
+    }
+  }
+
+  .card__description {
+    margin-left: 10px;
+
+    &--show-more{
+      padding: 0;
+      margin: -2px 0 0 6px;
+    }
+  }
+
+  .card__value {
+    margin-right: 2px;
+  }
+
+  .card__image-wrapper {
+    position: absolute;
+    left: 7px;
+    bottom: 7px;
+
+    &--big{
+      left: 8px;
+      bottom: 10px;
+    }
+
+    &--big-chicken{
+      bottom: 13px;
+    }
+
+    &--show-more{
+      transform: translateY(-222px);
+    }
   }
 }
