--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -21,7 +21,7 @@
   }
 
 
-  &--gray {
+  &--show-more {
     background-color: $basic-gray;
     color: $special-dark-gray;
 
@@ -31,6 +31,16 @@
 
     &:active {
       color: rgba(68, 68, 68, 0.3);
+    }
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .button {
+    margin: 0 3px 0 9px;
+
+    &--extra-goods{
+      margin: 0;
     }
   }
 }
