--- a/source/sass/blocks/footer/social-list.scss
+++ b/source/sass/blocks/footer/social-list.scss
@@ -3,7 +3,7 @@
   gap: 24px;
   list-style-type: none;
   margin: 0 auto;
-  padding: 19px 0 19px;
+  padding: 19px 2px 19px 0;
   align-items: center;
 }
 
