--- a/source/sass/blocks/main/extra-goods-item.scss
+++ b/source/sass/blocks/main/extra-goods-item.scss
@@ -45,7 +45,12 @@
 
 @media (min-width: $tablet-width) {
   .extra-goods-item {
-    padding: 26px 38px 28px;
+    padding: 26px 38px 27px;
+    border-top: none;
+
+    &:last-child{
+      border-bottom: none;
+    }
 
     &:not(:last-child) {
       border-bottom: 1px solid $special-gray;
@@ -55,7 +60,7 @@
   .extra-goods-item__content-wrapper {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 21px;
+    margin-bottom: 22px;
   }
 
   .extra-goods-item__title {
@@ -69,13 +74,26 @@
     padding-bottom: 0;
     font-size: 16px;
     line-height: 20px;
+    padding-top: 2px;
+
+    &:nth-child(2){
+      padding-bottom: 0;
+    }
   }
 
   .extra-goods-item__value {
-    margin-left: 49px;
+    margin-left: 50px;
     padding-bottom: 0;
     font-size: 16px;
     line-height: 20px;
+
+    &--water-price{
+      margin-left: 59px;
+    }
+
+    &--vitamins-price{
+      margin-left: 51px;
+    }
   }
 
   .extra-goods-item__button {
@@ -89,7 +107,15 @@
     grid-template-columns: 1fr 244px;
     padding: 15px 0 16px;
     gap: 38px;
-    border-bottom: 1px solid $special-gray;
+    border-top: 1px solid $special-gray;
+
+    &:last-child {
+      border-bottom: 1px solid $special-gray;
+    }
+
+    &:not(:last-child) {
+      border-bottom: unset;
+    }
   }
 
   .extra-goods-item__content-wrapper {
@@ -104,9 +130,15 @@
     min-width: 288px;
     font-size: 16px;
     line-height: 20px;
+    padding-top: 8px;
+    margin-left: 1px;
   }
 
   .extra-goods-item__value {
     margin: 0;
+
+    &--water-price{
+      margin-right: 10px;
+    }
   }
 }
