--- a/source/sass/blocks/main/form-comment.scss
+++ b/source/sass/blocks/main/form-comment.scss
@@ -1,8 +1,9 @@
 .form-comment {}
 
 .form-comment__title {
-  padding-bottom: 38px;
+  padding: 0 0 38px;
   width: 100%;
+  margin-top: -1px;
   position: relative;
 
   &::after {
@@ -13,7 +14,7 @@
     width: 158px;
     height: 2px;
     right: -20px;
-    top: 15px;
+    top: 14px;
   }
 }
 
@@ -25,6 +26,8 @@
   border: none;
   outline: 1px solid $basic-gray-4;
   width: 100%;
+  min-height: 150px;
+  margin-bottom: 9px;
   resize: none;
 }
 
