--- a/source/sass/blocks/main/form-contact.scss
+++ b/source/sass/blocks/main/form-contact.scss
@@ -1,11 +1,13 @@
 .form-contact {
-  padding: 26px 0 23px;
   display: grid;
+  margin-top: 25px;
 }
 
 .form-contact__title {
   position: relative;
   width: 100%;
+  padding: 0 0 35px;
+
 
   &::after {
     position: absolute;
@@ -14,7 +16,7 @@
     width: 99px;
     height: 2px;
     right: -20px;
-    top: 15px;
+    top: 16px;
   }
 }
 
@@ -38,7 +40,7 @@
 
 .form-contact__input-detail {
   flex-grow: 1;
-  padding: 14px 40px 14px 15px;
+  padding: 13px 40px 14px 15px;
   font: inherit;
   text-transform: uppercase;
   color: $special-dark-gray;
