--- a/source/sass/blocks/main/program-type.scss
+++ b/source/sass/blocks/main/program-type.scss
@@ -1,5 +1,26 @@
 .program-type {
+  position: relative;
   padding: 22px 0 19px;
+
+  &::before{
+    position: absolute;
+    content: "";
+    height: 1px;
+    background-color: #D9D9D9;
+    top: -2px;
+    left: -30px;
+    right: -30px;
+  }
+
+  &::after{
+    position: absolute;
+    content: "";
+    height: 1px;
+    background-color: #D9D9D9;
+    bottom: 1px;
+    left: -30px;
+    right: -30px;
+  }
 }
 
 .program-type__list {
@@ -10,10 +31,15 @@
   gap: 13px;
 }
 
+
 .program-type__control {
   position: relative;
   display: block;
-  padding: 6px 0 6px 45px;
+  padding: 6px 0 6px 46px;
+
+  &--weight-loss{
+    padding-left: 45px;
+  }
 
   &:hover>.program-type__control-mark-radio {
     border: 1px solid $border-gray-3;
