--- a/source/sass/blocks/header/site-list.scss
+++ b/source/sass/blocks/header/site-list.scss
@@ -79,7 +79,7 @@
     &--current::after {
       content: "";
       position: absolute;
-      bottom: 0;
+      bottom: 2px;
       width: 100%;
       height: 2px;
       right: 1px;
