--- a/source/sass/blocks/main/form-additionally.scss
+++ b/source/sass/blocks/main/form-additionally.scss
@@ -74,26 +74,24 @@
   .form-additionally__title {
     padding: 0 0 57px;
 
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
-      width: 30px;
-      height: 2px;
-      left: -70px;
-      top: 22px;
-    }
-
+    &::before,
     &::after {
       position: absolute;
       content: "";
       display: block;
       background-color: #68b738;
-      width: 446px;
       height: 2px;
-      right: -70px;
       top: 22px;
+    }
+
+    &::before{
+      width: 30px;
+      left: -70px;
+    }
+
+    &::after {
+      min-width: 446px;
+      right: -70px;
     }
   }
 
@@ -138,23 +136,13 @@
   .form-additionally__title {
 
     &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
       width: 70px;
-      height: 2px;
       left: -110px;
       top: 23px;
     }
 
     &::after {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
       width: 1078px;
-      height: 2px;
       right: -110px;
       top: 23px;
     }
