--- a/source/sass/blocks/main/form-comment.scss
+++ b/source/sass/blocks/main/form-comment.scss
@@ -35,26 +35,24 @@
     width: 100%;
     margin: 0 0 77px;
 
-    &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
-      width: 30px;
-      height: 2px;
-      left: -70px;
-      top: 55px;
-    }
-
+    &::before,
     &::after {
       position: absolute;
       content: "";
       display: block;
       background-color: #68b738;
-      width: 478px;
       height: 2px;
-      right: -70px;
       top: 55px;
+    }
+
+    &::before{
+      width: 30px;
+      left: -70px;
+    }
+
+    &::after {
+      width: 478px;
+      right: -70px;
     }
   }
 
@@ -69,23 +67,13 @@
   .form-comment__title {
 
     &::before {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
       width: 70px;
-      height: 2px;
       left: -110px;
       top: 53px;
     }
 
     &::after {
-      position: absolute;
-      content: "";
-      display: block;
-      background-color: #68b738;
       width: 1108px;
-      height: 2px;
       right: -110px;
       top: 53px;
     }
