--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 @import "./visually-hidden.scss";
 @import "./page.scss";
 @import "./blocks/button.scss";
-@import "./blocks/error.scss";
+@import "./blocks/input-error.scss";
 @import "./blocks/disabled.scss";
 @import "./blocks/page-title.scss";
 @import "./blocks/section-title.scss";
