--- a/source/sass/blocks/footer/copyright.scss
+++ b/source/sass/blocks/footer/copyright.scss
@@ -1,9 +1,11 @@
 .copyright {
   display: flex;
   justify-content: space-between;
+  color: $special-dark-gray;
+  cursor: pointer;
 
   &:hover > .copyright__link {
-    color: $basic-green;
+    fill: $basic-green;
   }
 
   &:active {
@@ -16,9 +18,10 @@
   font-family: "Arial";
   font-size: 16px;
   font-weight: 400;
+
 }
 
 .copyright__link {
   line-height: 0;
-  color: $special-dark-gray;
+  fill: $special-gray-4;
 }
