--- a/source/sass/blocks/main/programs.scss
+++ b/source/sass/blocks/main/programs.scss
@@ -122,6 +122,7 @@
 
     &::after {
       top: -4px;
+      left: 26px;
     }
   }
 }
@@ -172,6 +173,7 @@
 
     &::after {
       top: -3px;
+      left: 28px;
     }
 
   }
