--- a/source/sass/blocks/header/main-header.scss
+++ b/source/sass/blocks/header/main-header.scss
@@ -10,23 +10,8 @@
 }
 
 .main-header__logo {
-  position: absolute;
-  top: 10px;
-  left: 20px;
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:focus {
-    opacity: 0.6;
-  }
-}
-
-.main-header__logo-secondary {
   display: block;
-  padding: 23px 0 24px;
-  margin: 0 auto;
+  padding: 10px 0 16px;
 
   &:hover {
     opacity: 0.8;
@@ -36,6 +21,20 @@
     opacity: 0.6;
   }
 }
+
+// .main-header__logo-secondary {
+//   display: block;
+//   padding: 23px 0 24px;
+//   margin: 0 auto;
+
+//   &:hover {
+//     opacity: 0.8;
+//   }
+
+//   &:focus {
+//     opacity: 0.6;
+//   }
+
 
 .main-header__logo-image {
   display: block;
@@ -51,12 +50,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 24px 0;
+    padding: 25px 0 23px;
     align-items: center;
   }
 
   .main-header__logo {
     position: static;
+    padding: 0;
   }
 
   .main-header__logo-secondary {
