--- a/source/sass/blocks/main/card.scss
+++ b/source/sass/blocks/main/card.scss
@@ -142,6 +142,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
     &--show-more{
       background-color: $white
