--- a/source/sass/blocks/main/form-comment.scss
+++ b/source/sass/blocks/main/form-comment.scss
@@ -27,6 +27,10 @@
   min-height: 150px;
   margin-bottom: 9px;
   resize: none;
+
+  &:focus{
+      outline: 2px solid $special-dark-gray;
+  }
 }
 
 @media (min-width: $tablet-width) {
